memelord-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memelord
  namespace: memelord-margus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memelord
  template:
    metadata:
      labels:
        app: memelord
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: memelord
        image: ghcr.io/l4rm4nd/memelord:latest
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        volumeMounts:
        - name: logs
          mountPath: /opt/app/logs
        - name: tmp
          mountPath: /tmp
        - name: settings-override
          mountPath: /opt/app/myproject/settings_override.py
          subPath: settings_override.py
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: logs
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: settings-override
        configMap:
          name: memelord-settings-override
---
apiVersion: v1
kind: Service
metadata:
  name: memelord
  namespace: memelord-margus
spec:
  selector:
    app: memelord
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
